# oreilly-open-source-llm

./: .gitignore  02-similarity-cross-encoder.ipynb  README.md  pyproject.toml  requirements.txt
Day 1/: 01-sentiment-detection.ipynb  10-prepare-data.ipynb  10-sentiment-detection.ipynb  11-similarity-embeddings.ipynb  12-similarity-vectordb-milvus.ipynb  12-similarity-vectordb.ipynb  21-similarity-tantivy.ipynb  22-similarity-rrf.ipynb  23-similarity-cross-encoder.ipynb  31-similarity-langchain.ipynb  32-txtai.ipynb  README.md  sentences.json  sentences.txt
Day 1/un/TXT/Session 77 - 2022/: AGO_77_2022.txt  AND_77_2022.txt  BIH_77_2022.txt  BRB_77_2022.txt  BTN_77_2022.txt  CAN_77_2022.txt  CIV_77_2022.txt  COD_77_2022.txt  CPV_77_2022.txt  CUB_77_2022.txt  DEU_77_2022.txt  DMA_77_2022.txt  DOM_77_2022.txt  ECU_77_2022.txt  EGY_77_2022.txt  EST_77_2022.txt  GBR_77_2022.txt  GEO_77_2022.txt  GUY_77_2022.txt  HTI_77_2022.txt  IDN_77_2022.txt  IND_77_2022.txt  IRL_77_2022.txt  IRN_77_2022.txt  IRQ_77_2022.txt  JOR_77_2022.txt  KGZ_77_2022.txt  KWT_77_2022.txt  LAO_77_2022.txt  LBN_77_2022.txt  LBY_77_2022.txt  LSO_77_2022.txt  MNG_77_2022.txt  MUS_77_2022.txt  MYS_77_2022.txt  NGA_77_2022.txt  NZL_77_2022.txt  (+15 more)
Day 2/: 01b-qwen-7b.ipynb  02-qwen-7b-gptq.ipynb  04-qwen-7b-exl2.ipynb  11a-qwen-8b.ipynb  11b-qwen-8b.ipynb  12-qwen-7b-gptq.ipynb  13-qwen-8b-awq.ipynb  14-qwen-8b-exl2.ipynb  15-qwen-8b-stream-exl2.ipynb  21-tgi.ipynb  22-vllm-direct-Copy1.ipynb  22-vllm-direct.ipynb  23-vllm-api.ipynb  23-vllm-direct-awq.ipynb  24-vllm-api.ipynb  README.md
Day 2/attic/: 16-qwen-8b-speculative.ipynb
Week 1/: 01-similarity-embeddings.ipynb  02-similarity-cross-encoder.ipynb  03-similarity-langchain.ipynb  04-txtai.ipynb  README.md
Week 2/: 01-llm-bfloat16.ipynb  01-llm.ipynb  01a-mistral-7b.ipynb  01a-qwen-7b.ipynb  01b-mistral-7b.ipynb  02-gptq.ipynb  02-mistral-7b-gptq.ipynb  03-mistral-7b-awq.ipynb  03-qwen-7b-awq.ipynb  04-mistral-7b-exl2.ipynb  05-convert-quantize-serve.sh  10-mistral-optimized.ipynb  10-mistral.ipynb  30-exlv2-generate.ipynb  README.md
Week 3/: 11-vllm-direct.ipynb
Week 3/.ipynb_checkpoints/: 02-vllm-api-checkpoint.ipynb
un/TXT/Session 77 - 2022/: ALB_77_2022.txt  ARG_77_2022.txt  ARM_77_2022.txt  ATG_77_2022.txt  AUS_77_2022.txt  AZE_77_2022.txt  BEL_77_2022.txt  BFA_77_2022.txt  BGD_77_2022.txt  BHR_77_2022.txt  BLR_77_2022.txt  BLZ_77_2022.txt  BOL_77_2022.txt  BRA_77_2022.txt  BWA_77_2022.txt  CAF_77_2022.txt  CHE_77_2022.txt  CHL_77_2022.txt  CHN_77_2022.txt  COL_77_2022.txt  COM_77_2022.txt  CRI_77_2022.txt  DNK_77_2022.txt  DZA_77_2022.txt  ERI_77_2022.txt  ETH_77_2022.txt  EU_77_2022.txt  FIN_77_2022.txt  FJI_77_2022.txt  GAB_77_2022.txt  GHA_77_2022.txt  GIN_77_2022.txt  GMB_77_2022.txt  GNQ_77_2022.txt  GRC_77_2022.txt  GRD_77_2022.txt  GTM_77_2022.txt  ISR_77_2022.txt  JAM_77_2022.txt  KAZ_77_2022.txt  (+48 more)
(+245 files in other folders)
